--- a/templates/slack-default-config.yaml
+++ b/templates/slack-default-config.yaml
@@ -11,7 +11,6 @@
 - response_format_prompt: &response_format_prompt >
     - Format the response as a Slack message, using appropriate 
     formatting such as *bold*, _italic_, and `code` where necessary.
-
     - Use bullet points or numbered lists for multiple items.
-
-    - If including links, use the format <url|text>.
+    - If the response contains a file or image, return it with the <file> tags and not as a link.
+    - If including hyperlinks, use the format <url|text>.
