--- a/templates/web-default-config.yaml
+++ b/templates/web-default-config.yaml
@@ -4,4 +4,4 @@
     max_file_size: 2000 # 2GB
 
 - response_format_prompt: &response_format_prompt >
-    - Format the response as markdown.
+    Return all responses in markdown format and if the response contains a file or image, return it with the <file> tags and not as a link.
