AI-693: Updating pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,9 +57,10 @@ dependencies = [
     "duckduckgo_search~=6.3.7",
     "markitdown~=0.0.1a3",
     "pyperclip~=1.9.0",
-    "solace-ai-connector~=1.0.2",
-    "solace-ai-connector-web~=0.2.1",
-    "solace-ai-connector-rest~=0.0.2",
+    "waitress>=3.0.2",
+    "solace-ai-connector @ git+https://github.com/SolaceDev/solace-ai-connector.git@hugo/ai-693/production-server",
+    "solace-ai-connector-web @ git+https://github.com/SolaceLabs/solace-ai-connector-web.git@hugo/ai-693/production-server",
+    "solace-ai-connector-rest @ git+https://github.com/SolaceLabs/solace-ai-connector-rest.git@hugo/ai-693/production-server",
     "solace-ai-connector-slack~=0.0.1",
   ]
 
