--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,13 @@ documentation = "https://github.com/SolaceLabs/solace-agent-mesh/blob/main/docs/
 "config_portal/frontend/static" = "solace_agent_mesh/config_portal/frontend/static"
 "config_portal/backend" = "solace_agent_mesh/config_portal/backend"
 
+
 [tool.hatch.build.targets.sdist.force-include]
 "web-visualizer/dist" = "/assets/web-visualizer"
+"config_portal/frontend/static" = "/assets/config_portal"
+
+
+
 
 [project.scripts]
 solace-agent-mesh = "solace_agent_mesh.cli.main:main"
@@ -70,6 +75,11 @@ sam = "solace_agent_mesh.cli.main:main"
 [tool.hatch.build.targets.wheel]
 packages = ["solace_agent_mesh"]
 
+[tool.hatch.build.targets.sdist.hooks.custom]
+path = ".github/helper_scripts/build_frontend.py"
+
+[tool.hatch.build.targets.wheel.hooks.custom]
+path = ".github/helper_scripts/build_frontend.py"
 
 [tool.hatch.version]
 path = "cli/__init__.py"
