Downgrade logs to debug level

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,12 @@ dependencies = [
     "pytest~=8.3.1",
     "pytest-cov~=5.0.0",
     "pyperclip~=1.9.0",
-    "solace-ai-connector~=1.1.4",
+    "solace-ai-connector @ git+https://github.com/SolaceDev/solace-ai-connector.git@hugo/clean-logs",
     "solace-ai-connector[websocket]~=1.1.4",
     "solace-ai-connector[llm]~=1.1.4",
     "solace-ai-connector-web~=0.2.2",
     "solace-ai-connector-rest~=0.0.3",
-    "solace-ai-connector-slack~=0.0.2",
+    "solace-ai-connector-slack @ git+https://github.com/SolaceDev/solace-ai-connector-slack.git@hugo/clean-logs",
   ]
 
 [project.urls]
@@ -67,7 +67,8 @@ documentation = "https://github.com/SolaceLabs/solace-agent-mesh/blob/main/docs/
 "web-visualizer/dist" = "/assets/web-visualizer"
 "config_portal/frontend/static" = "/assets/config_portal"
 
-
+[tool.hatch.metadata]
+allow-direct-references = true
 
 
 [project.scripts]
