--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,12 @@ dependencies = [
     "pytest~=8.3.1",
     "pytest-cov~=5.0.0",
     "pyperclip~=1.9.0",
-    "solace-ai-connector @ git+https://github.com/SolaceDev/solace-ai-connector.git@hugo/clean-logs",
+    "solace-ai-connector~=1.1.4",
     "solace-ai-connector[websocket]~=1.1.4",
     "solace-ai-connector[llm]~=1.1.4",
     "solace-ai-connector-web~=0.2.2",
     "solace-ai-connector-rest~=0.0.3",
-    "solace-ai-connector-slack @ git+https://github.com/SolaceDev/solace-ai-connector-slack.git@hugo/clean-logs",
+    "solace-ai-connector-slack @ git+https://github.com/SolaceLabs/solace-ai-connector-slack.git@hugo/clean-logs",
   ]
 
 [project.urls]
