Update solace-ai-connector imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,9 @@ dependencies = [
     "solace-ai-connector~=1.1.4",
     "solace-ai-connector[websocket]~=1.1.4",
     "solace-ai-connector[llm]~=1.1.4",
-    "solace-ai-connector-web~=0.2.2",
-    "solace-ai-connector-rest~=0.0.3",
-    "solace-ai-connector-slack @ git+https://github.com/SolaceLabs/solace-ai-connector-slack.git@hugo/clean-logs",
+    "solace-ai-connector-web @ git+https://github.com/SolaceDev/solace-ai-connector-web.git@hugo/cleanup-logs",
+    "solace-ai-connector-rest @ git+https://github.com/SolaceDev/solace-ai-connector-rest.git@hugo/clean-logs",
+    "solace-ai-connector-slack~=0.0.2",
   ]
 
 [project.urls]
