--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
     with:
       min-python-version: "3.10"
       max-python-version: "3.13"
-      whitesource_project_name: "solace-a2a-agent"
+      whitesource_project_name: "solace-agent-mesh"
       whitesource_product_name: "solaceai"
       whitesource_config_file: "wss-unified-agent.config"
       slack_notification_profile: "ai-connector"
