--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "pandas>=2.2.3",
     "numpy>=2.2.5",
     "plotly>=6.0.1",
-    "kaleido~=0.2.1",
+    "kaleido==0.2.1",
     "PyYAML>=6.0",
     "python-multipart>=0.0.7",
     "markitdown[all]==0.1.1",
