--- a/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_template_missing_template_file.yaml
+++ b/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_template_missing_template_file.yaml
@@ -1,5 +1,5 @@
 test_case_id: "embed_ac_template_missing_template_file_001"
-description: "Tests «artifact_content:data.csv>>>apply_to_template:no_template.mustache>>>format:html» when template is missing."
+description: "Tests «artifact_content:data.csv>>>apply_to_template:no_template.mustache>>>format:text» when template is missing."
 skip_intermediate_events: true
 setup_artifacts:
   - filename: "data.csv"
@@ -11,7 +11,7 @@ gateway_input:
   parts: [{type: "text", text: "Render data.csv with missing template"}]
 llm_interactions:
   - static_response:
-      choices: [{message: {role: "assistant", content: "Result: «artifact_content:data.csv>>>apply_to_template:no_template.mustache>>>format:html»"}}]
+      choices: [{message: {role: "assistant", content: "Result: «artifact_content:data.csv>>>apply_to_template:no_template.mustache>>>format:text"}}]
 expected_gateway_output:
   - type: "final_response"
     content_parts:
