--- a/examples/a2a_atlassian_sse.yaml
+++ b/examples/a2a_atlassian_sse.yaml
@@ -13,7 +13,7 @@ apps:
 # --- Atlassian (Jira/Confluence) MCP Agent ---
   - name: atlassian_mcp_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
   
