--- a/examples/a2a_agents.yaml
+++ b/examples/a2a_agents.yaml
@@ -13,7 +13,7 @@ apps:
 # Playwright MCP Agent
   # - name: playwright_mcp_agent_app
   #   app_base_path: .
-  #   app_module: src.agent.sac.app
+  #   app_module: src.solace_agent_mesh.agent.sac.app
   #   broker:
   #     <<: *broker_connection
   #
@@ -69,7 +69,7 @@ apps:
 # ---  Markitdown Agent ---
   - name: markitdown_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
 
@@ -125,7 +125,7 @@ apps:
 # --- Mermaid Agent (Python Tool based) ---
   - name: mermaid_pytool_agent_app # New distinct app name
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
 
@@ -178,7 +178,7 @@ apps:
 # --- Web Agent ---
   - name: web_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
 
@@ -231,7 +231,7 @@ apps:
 # --- Report Agent ---
   # - name: report_generation_agent_app
   #   app_base_path: .
-  #   app_module: src.agent.sac.app
+  #   app_module: src.solace_agent_mesh.agent.sac.app
   #   broker:
   #     <<: *broker_connection
 
@@ -263,7 +263,7 @@ apps:
 
   #     tools:
   #       - tool_type: python
-  #         component_module: src.agent.tools.web_tools
+  #         component_module: src.solace_agent_mesh.agent.tools.web_tools
   #         component_base_path: .
   #         function_name: web_request
   #         tool_name: "web_request"
@@ -305,7 +305,7 @@ apps:
 # --- Atlassian (Jira/Confluence) MCP Agent ---
   # - name: atlassian_mcp_agent_app
   #   app_base_path: .
-  #   app_module: src.agent.sac.app
+  #   app_module: src.solace_agent_mesh.agent.sac.app
   #   broker:
   #     <<: *broker_connection
   
