--- a/examples/a2a_host_example.yaml
+++ b/examples/a2a_host_example.yaml
@@ -19,7 +19,7 @@ apps:
   # Example 1: Custom OpenAI-Compatible LLM Agent
   - name: custom_llm_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app # Use the custom App class in its new location
+    app_module: src.solace_agent_mesh.agent.sac.app # Use the custom App class in its new location
     broker:
       <<: *broker_connection
 
@@ -72,7 +72,7 @@ apps:
   # Example 2: Agent with Local Python Tool and GCS Artifacts
   # - name: tool_agent_app
   #   app_base_path: .
-  #   app_module: src.agent.sac.app # Use the custom App class in its new location
+  #   app_module: src.solace_agent_mesh.agent.sac.app # Use the custom App class in its new location
   #   broker:
   #     <<: *broker_connection
 
