--- a/examples/a2a_mcp_example.yaml
+++ b/examples/a2a_mcp_example.yaml
@@ -19,7 +19,7 @@ apps:
 # --- Example 1: Filesystem MCP Agent ---
   - name: filesystem_mcp_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
 
@@ -81,7 +81,7 @@ apps:
 # --- Example 2: Playwright MCP Agent ---
   - name: playwright_mcp_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app
+    app_module: src.solace_agent_mesh.agent.sac.app
     broker:
       <<: *broker_connection
 
@@ -141,7 +141,7 @@ apps:
 # --- Example 3: Atlassian (Jira/Confluence) MCP Agent ---
   # - name: atlassian_mcp_agent_app
   #   app_base_path: .
-  #   app_module: src.agent.sac.app
+  #   app_module: src.solace_agent_mesh.agent.sac.app
   #   broker:
   #     <<: *broker_connection
 
