--- a/examples/a2a_orchestrator.yaml
+++ b/examples/a2a_orchestrator.yaml
@@ -14,7 +14,7 @@ apps:
   # Example 1: Custom OpenAI-Compatible LLM Agent
   - name: custom_llm_agent_app
     app_base_path: .
-    app_module: src.agent.sac.app # Use the custom App class in its new location
+    app_module: src.solace_agent_mesh.agent.sac.app # Use the custom App class in its new location
     broker:
       <<: *broker_connection
 
