--- a/examples/webui_backend.yaml
+++ b/examples/webui_backend.yaml
@@ -11,7 +11,7 @@ log:
 apps:
   - name: a2a_webui_backend_app
     app_base_path: . # Assume running from project root where src/ is located
-    app_module: src.gateway.http_sse.app
+    app_module: src.solace_agent_mesh.gateway.http_sse.app
 
     # Broker settings for this app instance
     broker:
