--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   release:
-    uses: SolaceDev/solace-public-workflows/.github/workflows/hatch_release_pypi.yml@add-prisma
+    uses: SolaceDev/solace-public-workflows/.github/workflows/hatch_release_pypi.yml@test-prisma
     with:
       ENVIRONMENT: pypi
       version: ${{ github.event.inputs.version }}
@@ -34,18 +34,6 @@ jobs:
 
     secrets:
       COMMIT_KEY: ${{ secrets.COMMIT_KEY }}
-      PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-      PRISMA_DOCKER_IMAGE_TO_CHECK: ${{ secrets.DOCKER_IMAGE_TO_CHECK }}
-      PRISMA_ACCESS_KEY: ${{ secrets.PRISMA_ACCESS_KEY_ID }}
-      PRISMA_ACCESS_KEY_SECRET: ${{ secrets.PRISMA_SECRET_ACCESS_KEY }}
-      SONARQUBE_PROJECT_KEY: ${{ secrets.SONARQUBE_PROJECT_KEY }}
-      SONARQUBE_PROJECT_MAIN_BRANCH: "main"
-      SONARQUBE_QUERY_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-      SONARQUBE_HOTSPOTS_API_URL: ${{ secrets.SONARQUBE_HOTSPOTS_API_URL }}
-      WHITESOURCE_API_KEY: ${{ secrets.WHITESOURCE_API_KEY }}
-      MANIFEST_AWS_ACCESS_KEY_ID: ${{ secrets.MANIFEST_READ_ONLY_AWS_ACCESS_KEY_ID }}
-      MANIFEST_AWS_SECRET_ACCESS_KEY: ${{ secrets.MANIFEST_READ_ONLY_AWS_SECRET_ACCESS_KEY }}
-      MANIFEST_AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
   build_and_push_docker:
     name: Build and Push Docker Image
