--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,6 +74,7 @@ jobs:
           fi
 
       - name: Set Build Params
+        id: set_build_params
         run: |
           if [[ "${{ github.event_name  == 'push' }}" == "true" ]]; then
             export DOCKER_PUSH=true
@@ -108,16 +109,26 @@ jobs:
         id: tag_images
         shell: bash
         run: |
-          registry="${{ secrets.SAM_AWS_ECR_REGISTRY }}"
           version="${{ steps.get_version.outputs.version }}"
           release_tag="${{ steps.release_tag.outputs.release_tag }}"
           short_sha="${{ steps.get_commit_hash.outputs.short_sha }}"
 
+          # Determine image name based on event and branch
+          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref_name }}" == "${{ github.event.repository.default_branch }}" ]]; then
+            # Push to default branch - use ECR registry
+            image_name="${{ secrets.SAM_AWS_ECR_REGISTRY }}/solace-agent-mesh"
+            echo "Using ECR registry for default branch push"
+          else
+            # PR or other branch - use GitHub repo name
+            image_name="${{ github.repository }}"
+            echo "Using GitHub repository name for PR/branch build"
+          fi
+
           # Create tags array
-          tags="${registry}/solace-agent-mesh:${version}"
-          tags="${tags},${registry}/solace-agent-mesh:${version}-${short_sha}"
-          tags="${tags},${registry}/solace-agent-mesh:${release_tag}"
-          tags="${tags},${registry}/solace-agent-mesh:${release_tag}-${short_sha}"
+          tags="${image_name}:${version}"
+          tags="${tags},${image_name}:${version}-${short_sha}"
+          tags="${tags},${image_name}:${release_tag}"
+          tags="${tags},${image_name}:${release_tag}-${short_sha}"
 
           echo "tags=${tags}" >> $GITHUB_OUTPUT
           echo "Created tags: ${tags}"
@@ -128,7 +139,7 @@ jobs:
           context: .
           file: Dockerfile
           tags: ${{ steps.tag_images.outputs.tags }}
-          push: ${{ fromJSON(env.DOCKER_PUSH) }}
+          push: ${{ fromJSON(env.DOCKER_PUSH)}}
           cache-from: type=gha
           cache-to: type=gha
 
